feat(layout): 重构页面布局结构并添加导航配置
- 将所有页面容器从 container 改为 container-fluid 实现全宽布局
- 在页面主内容区域添加左侧作者信息侧边栏
- 更新 404、关于、归档、分类等页面的响应式网格布局
- 在 _config.yml 中添加导航菜单配置项
- 为首页和其他页面模板添加完整的导航链接支持
- 更新国际化文件中的导航相关文本翻译
- 添加头部组件和作者侧边栏组件引用
- 优化页面内容区域的列宽设置以适配侧边栏布局

--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,27 @@ i18n:
   auto_detect: true
 
 # -------------------------------------------
+# Navigation Menu
+# -------------------------------------------
+navigation:
+  menu:
+    - title: 首页
+      path: /
+      i18n: common.home
+    - title: 归档
+      path: /archives/
+      i18n: common.archives
+    - title: 分类
+      path: /categories/
+      i18n: common.categories
+    - title: 标签
+      path: /tags/
+      i18n: common.tags
+    - title: 关于
+      path: /about/
+      i18n: common.about
+
+# -------------------------------------------
 # Components Switch
 # -------------------------------------------
 components:
