feat(config): 添加自定义代码注入功能
- 在 _config.yml 中新增 injections 配置项，支持 head、bodyStart、bodyEnd、footer 和 pages 五个注入点
- 扩展 head.ejs 模板，支持在 <head> 部分注入脚本、样式和 HTML 内容
- 修改 layout.ejs 模板，支持在 body 开始、结束和页脚位置注入自定义内容
- 新增 injection-manager.js 管理器，负责处理各种注入逻辑
- 创建自定义注入使用文档 docs/custom-injections.md
- 在 main.js 中引入并初始化 injection-manager.js

--- a/_config.yml
+++ b/_config.yml
@@ -142,3 +142,53 @@ ads:
   
   # 其他广告平台
   custom: ""
+
+# -------------------------------------------
+# Custom Code Injections
+# -------------------------------------------
+injections:
+  # Head injections - added to <head> section
+  head: []
+  #   - type: script
+  #     src: https://example.com/script.js
+  #     async: true
+  #   - type: style
+  #     href: https://example.com/style.css
+  #   - type: script
+  #     content: |
+  #       console.log('Custom script in head');
+  #   - type: html
+  #     content: <meta name="custom-meta" content="value">
+  
+  # Body start injections - added right after <body> tag
+  bodyStart: []
+  #   - type: html
+  #     content: <div id="custom-body-start">Body start content</div>
+  
+  # Body end injections - added before </body> tag
+  bodyEnd: []
+  #   - type: html
+  #     content: <div id="custom-body-end">Body end content</div>
+  
+  # Footer injections - added after main scripts
+  footer: []
+  #   - type: script
+  #     src: https://example.com/footer-script.js
+  #   - type: script
+  #     content: |
+  #       console.log('Footer script');
+  
+  # Page-specific injections
+  pages: {}
+  #   /about/:
+  #     - position: head
+  #       type: script
+  #       content: console.log('About page script');
+  #     - position: '#main-content'
+  #       method: append
+  #       type: html
+  #       content: <div>Custom content for about page</div>
+  #   /posts/*:
+  #     - position: body-start
+  #       type: html
+  #       content: <div>Custom content for all posts</div>
