feat(social): 重构社交链接配置与显示逻辑
- 支持新旧两种社交链接配置格式
- 新增社交链接图标映射和国际化支持
- 在页脚和作者侧边栏同步更新社交链接显示逻辑
- 添加完整的社交链接配置文档
- 扩展支持多种主流社交平台的图标和国际化键
- 实现自定义社交网络的灵活配置能力

--- a/_config.yml
+++ b/_config.yml
@@ -74,9 +74,23 @@ components:
 # Social Links
 # -------------------------------------------
 social:
-  github: "https://github.com/username"
-  twitter: "https://twitter.com/username"
-  email: "mailto:me@example.com"
+  links:
+    - name: github
+      url: "https://github.com/username"
+      icon: "💻"
+      i18n: social.github
+    - name: twitter
+      url: "https://twitter.com/username"
+      icon: "🐦"
+      i18n: social.twitter
+    - name: email
+      url: "mailto:me@example.com"
+      icon: "✉️"
+      i18n: social.email
+  # For backward compatibility, you can still use the old format:
+  # github: "https://github.com/username"
+  # twitter: "https://twitter.com/username"
+  # email: "mailto:me@example.com"
 
 # -------------------------------------------
 # Analytics (Optional)
