feat(theme): 重构页面布局和图标系统
- 更新社交链接图标配置，使用标准化图标名称
- 重构 about 页面模板结构，优化响应式布局
- 修改作者侧边栏，支持动态配置标题和描述
- 重写头部导航组件，添加图标支持和移动端适配
- 移除图标管理器中的表情符号回退机制
- 更新图标渲染器，集成更多 Tabler 图标资源
- 调整整体页面布局结构，改善可访问性和语义化
- 优化主题切换和语言切换功能实现方式

--- a/_config.yml
+++ b/_config.yml
@@ -77,15 +77,15 @@ social:
   links:
     - name: github
       url: "https://github.com/username"
-      icon: "💻"
+      icon: "github"
       i18n: social.github
     - name: twitter
       url: "https://twitter.com/username"
-      icon: "🐦"
+      icon: "twitter"
       i18n: social.twitter
     - name: email
       url: "mailto:me@example.com"
-      icon: "✉️"
+      icon: "email"
       i18n: social.email
   # For backward compatibility, you can still use the old format:
   # github: "https://github.com/username"
