feat(i18n): 完善多语言支持并优化页面配置
- 添加作者信息和主页配置到 _config.yml
- 更新 404 页面返回首页链接使用 url_for 函数
- 重构 about 页面模板，支持从配置文件读取作者信息
- 增强 archive、categories、tags 页面的国际化支持
- 扩展中英文语言包，完善各页面文本翻译
- 在 index 页面增加主页内容配置支持
- 为 post 页面添加图标按钮和操作标签
- 新增多个 SVG 图标用于界面交互元素
- 优化页面空状态提示和返回首页链接
- 统一使用 data-i18n 属性进行文本本地化处理

--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,32 @@ i18n:
   auto_detect: true
 
 # -------------------------------------------
+# Author Information
+# -------------------------------------------
+author:
+  name: "作者名称"
+  title: "全栈开发者"
+  location: "北京市"
+  experience: "5年+"
+  interests: "编程、阅读、摄影、旅行"
+  bio: "这里是一段关于作者的简短介绍。可以包括教育背景、工作经历、技术专长等信息。"
+  email: "me@example.com"
+
+# -------------------------------------------
+# Hero Section (Homepage)
+# -------------------------------------------
+hero:
+  title: "全栈创作者"
+  subtitle: "构建优雅数字体验"
+  primary_button_text: "最新文章"
+  secondary_button_text: "查看全部"
+  tech_stack_title: "技术栈"
+  latest_posts_title: "最新文章"
+  projects_title: "开源项目"
+  sample_post_excerpt: "这里是文章的简短摘要，展示文章的主要内容和亮点..."
+  sample_project_description: "这是一个开源项目的简短描述，展示项目的主要功能和特点..."
+
+# -------------------------------------------
 # Navigation Menu
 # -------------------------------------------
 navigation:
