feat(theme): 实现页面内容国际化配置支持
- 在 404、归档、分类、标签和文章页面中添加主题配置变量支持
- 为页面标题、副标题和按钮文本添加多语言配置选项
- 更新社交链接和导航菜单以支持无障碍访问属性
- 增强图标管理器以支持颜色和实际 SVG 渲染
- 在头部模板中添加 SEO 和无障碍访问元标签
- 为按钮元素添加 ARIA 角色属性以提高可访问性
- 在布局模板中添加自定义注入点支持
- 扩展配置文件以包含所有页面类型的国际化文本设置

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,64 @@ hero:
   sample_project_description: "这是一个开源项目的简短描述，展示项目的主要功能和特点..."
 
 # -------------------------------------------
+# Archive Page
+# -------------------------------------------
+archive:
+  title: "文章归档"
+  empty_title: "暂无文章"
+  empty_description: "还没有发布任何文章"
+  collapse: "折叠"
+  expand: "展开"
+  year_suffix: "年"
+  count_suffix: "篇文章"
+
+# -------------------------------------------
+# Categories Page
+# -------------------------------------------
+categories:
+  title: "文章分类"
+  empty_title: "暂无分类"
+  empty_description: "还没有创建任何分类"
+  no_description: "这个分类还没有描述"
+  cloud_title: "分类云"
+  read_more: "阅读全文"
+
+# -------------------------------------------
+# Tags Page
+# -------------------------------------------
+tags:
+  title: "标签云"
+  empty_title: "暂无标签"
+  empty_description: "还没有创建任何标签"
+  all_tags: "全部标签"
+  view_all: "查看全部"
+  no_posts: "这个标签下还没有文章"
+
+# -------------------------------------------
+# Post Page
+# -------------------------------------------
+post:
+  prev_post: "上一篇"
+  next_post: "下一篇"
+  no_more: "没有了"
+  like: "点赞"
+  share: "分享"
+  bookmark: "收藏"
+  tags_label: "标签:"
+  reading_time: "阅读"
+  reading_time_unit: "分钟"
+  word_count: "字数"
+
+# -------------------------------------------
+# 404 Page
+# -------------------------------------------
+not_found:
+  title: "页面迷路了"
+  subtitle: "看起来这个页面不存在"
+  back_home: "返回首页"
+  go_back: "返回"
+
+# -------------------------------------------
 # Navigation Menu
 # -------------------------------------------
 navigation:
